--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -30,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
