--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "scripts": {
     "client": "yarn workspace client start",
     "server": "yarn workspace server start",
-    "start": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\" "
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\" ",
+    "build": "yarn workspace client build",
+    "start": "yarn build && yarn server",
+    "deploy": "git subtree push --prefix server heroku master",
+    "heroku-postbuild": "git subtree push --prefix client heroku master && cd client && build" 
   }
 }
